<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp">
    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_arrow_back"
        android:layout_gravity="left"
        android:text="@string/send" />
    <TextView
        android:id="@+id/tvAppTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:text="@string/online_clothes"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tvForgotPasswordTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="24dp"
        android:gravity="center"
        android:text="@string/forgot_password"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/tvInstructions"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:text="@string/input_your_information"
            android:textSize="16sp" />



        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:padding="12dp" />



        <Button
            android:id="@+id/btnSend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/send" />


    </LinearLayout>
</LinearLayout>