<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:visibility="visible">

        <EditText
            android:id="@+id/etSignUpUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/username"
            android:drawableStart="@drawable/ic_person"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:layout_marginBottom="16dp" />

        <EditText
            android:id="@+id/etSignUpPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:drawableStart="@drawable/ic_lock"
            android:drawableEnd="@drawable/ic_visibility"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:layout_marginBottom="24dp" />

        <Button
            android:id="@+id/btnCreateAccount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create_account" />

        <Button
            android:id="@+id/btnRegisterWithGoogle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Register with Google"
            android:textAllCaps="false"
            android:drawableStart="@drawable/google"
            android:drawablePadding="8dp"
            android:padding="12dp"
            android:background="@drawable/button_background" />
</LinearLayout>